--- a/7. JESSE PINKMAN/css/7.css
+++ b/7. JESSE PINKMAN/css/7.css
@@ -36,29 +36,74 @@ body {
 }
 
 .without-blur div div img {
+    float: left;
     margin-right: 10px;
     border-radius: 5px;
 }
 
 .near-logo {
-    display: inline-block;
+    float: left;
+    padding-top: 10px;
 }
 
 .near-logo p:first-child {
     font-size: 20px;
     text-transform: uppercase;
-    color: #8f8f8f;
+    color: #848484;
 }
 
 .row2 {
+    text-align: center;
     border-top: 1px solid #c9cbcb;
     border-bottom: 1px solid #c9cbcb;
 }
 
+.row2 > div > div {
+    padding: 15px 0;
+}
+
+.row2 > div:nth-child(2) > div a {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #848484;
+}
+
+.row2 > div:nth-child(1) {
+    background: #c3b7d6;
+    color: #fff;
+}
+
+
+.selected {
+    position: relative;
+}
+.selected::after {
+    display: block;
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #FFF;
+    content: "";
+    bottom: 0;
+    right: 50%;
+    margin-bottom: -1px;
+}
+
+.row2 > div:nth-child(1) div a {
+    text-transform: uppercase;
+    color: #fff;
+}
+
 .row3 {
-    padding-bottom: 20px;
     border-bottom: 1px solid #c9cbcb;
 }
+
+/*.row3 div:nth-child(2) {
+    border-left: 1px solid #c9cbcb;
+    border-right: 1px solid #c9cbcb;
+}*/
 
 .row3 > div.col-lg-6 > input {
     width: 100%;
@@ -74,6 +119,22 @@ body {
     width: 100%;
 }
 
+.row3-last-name::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    padding-left: 15px;
+}
+.row3-last-name:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    padding-left: 15px;
+}
+.row3-last-name::-moz-placeholder { /* Mozilla Firefox 19+ */
+    padding-left: 15px;
+}
+.row3-last-name:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    padding-left: 15px;
+}
+/*.row3-last-name:placeholder-shown { !* Standard (https://drafts.csswg.org/selectors-4/#placeholder) *!
+    padding-left: 15px;
+}*/
+
 .row4 {
     padding-bottom: 20px;
     border-bottom: 1px solid #c9cbcb;
@@ -88,23 +149,74 @@ body {
     border-bottom: 1px solid #c9cbcb;
 }
 
+.row6-1, .row6-2 {
+    border-bottom: 1px solid #c9cbcb;
+}
+
+.row6-1 div, .row6-2 div, .row6-3 div {
+    border-left: 1px solid #c9cbcb;
+}
+
+.row6 > div:nth-child(1) div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 62%);
+}
+
+.row6 > div:nth-child(1) div > p {
+    font-size: 40px;
+    font-weight: bold;
+    color: #848484;
+}
+
+.row6-2 > div:nth-child(2) {
+    background: #f3eec2;
+    color: #848484;
+}
+
+.row6-2 > div:nth-child(2) a {
+    color: #848484;
+}
+
+.dollars-option {
+    padding: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.dollars-option a {
+    color: #b8b8b9;
+}
+
 .row7 {
     padding-bottom: 20px;
     border-bottom: 1px solid #c9cbcb;
 }
 
 input {
+    padding: 15px 0 0;
     background: #f8f8f8;
     border: none;
 }
 
 select {
-    background: #f8f8f8;
+    background: transparent;
+    width: 100%;
+    height: 56px;
+    padding: 0 48px;
+    font-size: 16px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    border-left: 1px solid #c9cbcb;
+    border-right: 1px solid #c9cbcb;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #dededf;
-    padding: 15px 0;
 }
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
     color:    #dededf;
@@ -119,5 +231,90 @@ select {
 }
 :placeholder-shown { /* Standard (https://drafts.csswg.org/selectors-4/#placeholder) */
     color:    #dededf;
-    padding: 15px 0;
 }
+
+/*input[type="checkbox"] {
+    display: inline-block;
+    margin: 15px 0 0;
+    border-radius: none;
+}*/
+
+
+
+.row7 div div, .row7 div p {
+    display: inline-block;
+}
+
+.row7 div p {
+    margin: 15px 0 0 10px;
+    text-transform: uppercase;
+    color: #c9cbcb;
+}
+
+.glyphicon-info-sign {
+    color: #c9cbcb;
+}
+
+input[type=checkbox] {
+    visibility: hidden;
+}
+
+input[type=checkbox] {
+    visibility: hidden;
+}
+
+.choose label {
+    cursor: pointer;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 15px;
+    top: 15px;
+    -webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    -moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -o-linear-gradient(top, #222 0%, #45484d 100%);
+    background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
+    background: linear-gradient(top, #222 0%, #45484d 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+}
+
+.choose input[type=checkbox]:checked + label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+
+.choose label:after {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    content: '';
+    position: absolute;
+    width: 9px;
+    height: 5px;
+    background: transparent;
+    top: 4px;
+    left: 4px;
+    border: 3px solid #fcfff4;
+    border-top: none;
+    border-right: none;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+input[type="submit"] {
+    display: inline-block;
+    float: right;
+    padding: 0 5px;
+    margin-top: 15px;
+    text-transform: uppercase;
+    background: #86c46d;
+    color: #fff;
+}
+
+
